--- a/.github/workflows/firstAction.yaml
+++ b/.github/workflows/firstAction.yaml
@@ -15,6 +15,7 @@ jobs:
             python --version
   run-shell-command-2:
     runs-on: ubuntu-latest
+    needs: ["run-shell-command"]
     steps:
       - name: print hello world
         run : echo world
