--- a/.github/workflows/firstAction.yaml
+++ b/.github/workflows/firstAction.yaml
@@ -36,7 +36,7 @@ jobs:
         shell: python
   run-shell-command-4:
     runs-on: ubuntu-latest
-    needs: ["run-shell-command-3"]
+    needs: ["run-shell-command-3","run-shell-command-2"]
     steps:
       - name: print hello world
         run : echo world
