--- a/.github/workflows/firstAction.yaml
+++ b/.github/workflows/firstAction.yaml
@@ -34,6 +34,16 @@ jobs:
         run: |
              print("Hello World")
         shell: python
+  run-shell-command-5:
+    runs-on: ubuntu-latest
+    needs: ["run-shell-command"]
+    steps:
+      - name: print hello world
+        run : echo world
+      - name: second hello world with multiline
+        run: |
+             print("Hello World")
+        shell: python        
   run-shell-command-4:
     runs-on: ubuntu-latest
     needs: ["run-shell-command-3","run-shell-command-2"]
