--- a/.github/workflows/firstAction.yaml
+++ b/.github/workflows/firstAction.yaml
@@ -13,16 +13,6 @@ jobs:
             echo world
             echo "sasa"
             python --version
-  run-shell-command-2:
-    runs-on: ubuntu-latest
-    needs: ["run-shell-command"]
-    steps:
-      - name: print hello world
-        run : echo world
-      - name: second hello world with multiline
-        run: |
-             print("Hello World")
-        shell: python
 
   run-shell-command-3:
     runs-on: ubuntu-latest
@@ -34,25 +24,17 @@ jobs:
         run: |
              print("Hello World")
         shell: python
-  run-shell-command-5:
+  use-external-actions:
     runs-on: ubuntu-latest
-    needs: ["run-shell-command"]
     steps:
-      - name: print hello world
-        run : echo world
-      - name: second hello world with multiline
-        run: |
-             print("Hello World")
-        shell: python        
-  run-shell-command-4:
-    runs-on: ubuntu-latest
-    needs: ["run-shell-command-3","run-shell-command-2"]
-    steps:
-      - name: print hello world
-        run : echo world
-      - name: second hello world with multiline
-        run: |
-             print("Hello World")
-        shell: python        
+      - name: Simple JS Action
+        id: greet 
+        uses: actions/hello-world-javascript-action@v1
+        with: 
+          who-to-greet: John
+      - name: Log Greeting Time
+        run: echo "${{ steps.greet.outputs.time }}"
+  
+
 
 
