--- a/.github/workflows/firstAction.yaml
+++ b/.github/workflows/firstAction.yaml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Our First Github Action 
 on: [push]
+#Normal Job With Nothing 
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
@@ -14,6 +15,8 @@ jobs:
             echo "sasa"
             python --version
 
+# Job which Depend On Previous Job and using python as shell
+# Concept- NEEDS,SHELL
   run-shell-command-3:
     runs-on: ubuntu-latest
     needs: ["run-shell-command"]
@@ -24,6 +27,9 @@ jobs:
         run: |
              print("Hello World")
         shell: python
+
+# Job which use External Actions
+# Concept- USES
   use-external-actions:
     runs-on: ubuntu-latest
     steps:
@@ -37,4 +43,21 @@ jobs:
   
 
 
+#How to use market place :https://github.com/marketplace
+#Concept:How to use checkout
+  using-checkout:
+    runs-on: ubuntu-latest
+    steps:
+      - name: list files
+        run: | 
+            pwd
+            ls
+      - name: checkout
+        uses: actions/checkout
 
+      - name: list files 2
+        run: | 
+            pwd
+            ls      
+      
+      
