--- a/.github/workflows/section2.yml
+++ b/.github/workflows/section2.yml
@@ -7,8 +7,8 @@ on:
       - "opened"
 jobs:
   first-jobs:
-    if: ${{ github.event.action }} == "closed"
     runs-on: ubuntu-latest
+    if: github.event.action == 'closed'
     steps: 
       - name: test-step
         run: |
