--- a/.github/workflows/Actions-Conditions.yml
+++ b/.github/workflows/Actions-Conditions.yml
@@ -1,11 +1,20 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
+
 name: our action Pipeline
-on:
-  pull_request:
-    types:
-      - "closed"
-      - "opened"
+on: [push]
+env:
+  GITHUBCON: ${{ toJson(github) }}
+  # pull_request:
+  #   branches:
+  #     - master
+  #   tags: 
+  #     -   
+  #   types:
+  #     - "closed"
+  #     - "opened"
+
 jobs:
+#How to filter jobs on Event Actions
   first-jobs:
     runs-on: ubuntu-latest
     if: github.event.action == 'closed'
@@ -22,4 +31,11 @@ jobs:
     steps: 
       - name: test-step from second jobs
         run: ls
+      - name : print-github
+        run: echo {{github}}
+      - name : print-github-from-env-without-curl
+        run: echo $GITHUBCON
+      - name : print-github-from-env-with-curl
+        run: echo ${GITHUBCON}
+
         
