--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -11,3 +11,7 @@ jobs:
     steps:
       - name: check-if-even
         run: echo ${{matrix.numbers}}
+        if: matrix.numbers%2==0
+      - name: check-if-odd
+        run: echo ${{matrix.numbers}}
+        if: matrix.numbers%2!=0
