--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -9,7 +9,7 @@ jobs:
         numbers: [1,2,3,4]
       max-parallel: 3
     env:
-      checkIfEven: {{matrix.numbers % 2 ==0}}
+      checkIfEven: ${{matrix.numbers % 2 ==0}}
     steps:
       - name: check-if-odd
         run: echo $checkIfEven
